--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,14 @@ layout: default
 
 <div class="home">
 
+    
+  <h3>Categories</h3>
+  {% for category in site.categories %}
+      <a href="/category/{{ category[0] }}/" style="text-decoration: none;">{% if category[0] == 'aws' %}{{ category[0] | upcase }}{% else %}{{ category[0] | capitalize }}{% endif %}</a><br />
+  {% endfor %}
+  <p />
+  
+  
   <h1 class="page-heading">Posts</h1>
   
   {{ content }}
