--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,10 +5,8 @@ layout: default
 <div class="home">
 
     
-  <h3>Categories</h3>
-  {% for category in site.categories %}
-      <a href="/category/{{ category[0] }}/" style="text-decoration: none;">{% if category[0] == 'aws' %}{{ category[0] | upcase }}{% else %}{{ category[0] | capitalize }}{% endif %}</a><br />
-  {% endfor %}
+  <h3>Recommendation</h3>
+  <a href="/category/gan-tutorial.html" style="text-decoration: none;">NIPS2016 GAN Tutorial (中文翻译)</a><br />
   <p />
   
   
