--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>
-            {{ site.title | escape }}
+            {{ site.title | escape }} @ 2017
             </li>
             {% if site.email %}
             <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
+        <p></p>
       </div>
     </div>
 
