--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,9 +21,7 @@ layout: default
     {% for post in site.posts %}
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <font size="2">
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </font>
+        <a class="post-link" href="{{ post.url | relative_url }}"><font size="2">{{ post.title | escape }}</font></a>
     {% endfor %}
   </ul>
 
