--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-    
-  <h1>Recommendation</h1>
+  <h2>Recommendation</h2>
+  <h1 class="page-heading">Posts</h1>
   <ul class="post-list">
     <li>
       <h2><a href="/category/gan-tutorial.html" style="text-decoration: none;">NIPS2016 GAN Tutorial (中文翻译)</a></h2>
