--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,11 +4,11 @@ layout: default
 
 <div class="home">
 
-  <h2>Recommendation</h2>
-  <h1 class="page-heading">Posts</h1>
+  <h1 class="page-heading">Recommendation</h1>
   <ul class="post-list">
     <li>
       <h2><a href="/category/gan-tutorial.html" style="text-decoration: none;">NIPS2016 GAN Tutorial (中文翻译)</a></h2>
+      此内容是Ian Goodfellow在NIPS2016大会上的Tutorial内容的中文版本。 此内容仅供学习参考使用， 有什么错误和问题，欢迎反馈指正。
     </li>
   </ul>
   
