--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,8 +7,9 @@ layout: default
   <h1 class="page-heading">Recommendation</h1>
   <ul class="post-list">
     <li>
-      <h2><a href="/category/gan-tutorial.html" style="text-decoration: none;">NIPS2016 GAN Tutorial (中文翻译)</a></h2>
-      此内容是Ian Goodfellow在NIPS2016大会上的Tutorial内容的中文版本。 此内容仅供学习参考使用， 有什么错误和问题，欢迎反馈指正。
+      <h2><a href="/category/gan-tutorial.html" style="text-decoration: none;">NIPS2016 GAN Tutorial (In Chinese)</a></h2>
+      This is a Chinese translation of the GAN tutorial which did by Ian Goodfellow at NIPS2016.
+      This translation can only be used for non commercial purpose.
     </li>
   </ul>
   
