--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,17 @@ layout: default
     </li>
   </ul>
   
+  <h1 class="page-heading">Classifier GAN</h1>
+  <ul class="post-list">
+    <li>
+      <h2><a href="https://sinpycn.github.io/2017/09/15/CCGAN.html" style="text-decoration: none;">Conditional Classifier GAN</a></h2>
+      In this work, we proposed a conditional GAN-based classifier for spoken language identification task, 
+      this work was published on Interspeech 2017.
+    </li>
+  </ul>
+    
   
+  <!--
   <h1 class="page-heading">Posts</h1>
   
   {{ content }}
@@ -26,6 +36,6 @@ layout: default
     {% endfor %}
 
 
-  <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>-->
+  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>-->
 
 </div>
