--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Recommendation</h1>
+  <h1 class="page-heading"><b>Recommendation</b></h1>
   <ul class="post-list">
     <li>
       <h2><a href="/category/gan-tutorial.html" style="text-decoration: none;">NIPS2016 GAN Tutorial (In Chinese)</a></h2>
@@ -13,7 +13,7 @@ layout: default
     </li>
   </ul>
   
-  <h1 class="page-heading">Classifier GAN</h1>
+  <h1 class="page-heading"><b>Classifier GAN</b></h1>
   <ul class="post-list">
     <li>
       <h2><a href="https://sinpycn.github.io/2017/09/15/CCGAN.html" style="text-decoration: none;">Conditional Classifier GAN</a></h2>
