--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
     <li>
       <h2><a href="https://sinpycn.github.io/2017/09/15/CCGAN.html" style="text-decoration: none;">Conditional Classifier GAN</a></h2>
       In this work, we proposed a conditional GAN-based classifier for spoken language identification task, 
-      this work was published on Interspeech 2017.
+      this work was published in Interspeech 2017.
     </li>
   </ul>
     
