--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,9 +22,9 @@ layout: default
     </li>
   </ul>
     
+
   
-  <!--
-  <h1 class="page-heading">Posts</h1>
+  <h1 class="page-heading">New Posts</h1>
   
   {{ content }}
 
@@ -36,6 +36,6 @@ layout: default
     {% endfor %}
 
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>-->
+  <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>-->
 
 </div>
