--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,17 +3,20 @@ layout: default
 ---
 
 <div class="home">
-
-  <h1 class="page-heading"><b>Recommendation</b></h1>
+  <h1 class="page-heading"><b>Peng Shen(沈 鵬)</b></h1>
   <ul class="post-list">
     <li>
-      <h2><a href="/category/gan-tutorial.html" style="text-decoration: none;">NIPS2016 GAN Tutorial (In Chinese)</a></h2>
-      This is a Chinese translation of the GAN tutorial which did by Ian Goodfellow at NIPS2016.
-      This translation can only be used for non commercial purpose.
+      I am a researcher at NICT, Kyoto, Japan, on automatic speech recognition, deep learning technology, spoken language identification, speaker recognition, event detection, etc.
+      I have four years full-time system development experience as a system engineer.
     </li>
   </ul>
  
-    
+  <h1 class="page-heading"><b>Research interest</b></h1>
+  <ul class="post-list">
+    <li>
+      Automatic speech recognition, signal processing, and machine learning (deep learning) related to image processing, data analysis and natural language processing.
+    </li>
+  </ul>    
 
   
   <h1 class="page-heading">New Posts</h1>
