--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,18 @@ layout: default
     </li>
   </ul>    
 
+  <h1 class="page-heading"><b>Work experiences</b></h1>
+  <ul class="post-list">
+    <li>
+   2014-Present: Researcher at National Institute of Information and Communications Technology (NICT). <br>
+   2004-2007: Information Management Engineer at Lenovo Group, China. <br>
+   2007-2013: MA, Ph. D. in , at Electronics and Information system Engineering, Gifu University, Japan. <br>
+    </li>
+  </ul>    
+  
+  
+
+
   
   <h1 class="page-heading">New Posts</h1>
   
