--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <a class="site-title" href="{{ "/" | relative_url }}">Peng Shen (沈　鵬)</a>
+    {% assign default_paths = site.pages | map: "path" %}
+    {% assign page_paths = site.header_pages | default: default_paths %}
+    <a class="site-title" href="{{ "/" | relative_url }}">Home</a>
   
     {% if page_paths %}
       <nav class="site-nav">
