--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,10 @@
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
     <a class="site-title" href="{{ "/" | relative_url }}">Home</a>
-  
+
+
+    
+    
     {% if page_paths %}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -18,6 +21,11 @@
           </span>
         </label>
 
+  
+        <div class="trigger">
+            <a class="page-link" href="/">Home</a>
+        </div>        
+        
         <div class="trigger">
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
