--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,7 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" href="{{ "/" | relative_url }}">Home</a>
 
-
-    
-    
     {% if page_paths %}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -20,13 +16,8 @@
             </svg>
           </span>
         </label>
-
-  
         <div class="trigger">
-            <a class="page-link" href="/">Home</a>
-        </div>        
-        
-        <div class="trigger">
+          <a class="page-link" href="{{ "/" | relative_url }}">Home</a>
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
             {% if my_page.id | truncate: 3 == "top" %}
