--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,12 +18,18 @@
         </label>
         <div class="trigger">
           <a class="page-link" href="{{ "/" | relative_url }}">Home</a>
+          <a class="page-link" href="{{ "/bio" | relative_url }}">Bio</a>
+          <a class="page-link" href="{{ "/publications" | relative_url }}">Publications</a>
+          <a class="page-link" href="{{ "/blogs" | relative_url }}">Blog</a>
+          
+          <!--
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
             {% if my_page.id | truncate: 3 == "top" %}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {% endif %}
           {% endfor %}
+          -->
         </div>
       </nav>
     {% endif %}
