--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>
-            {{ site.title | escape }} &copy; 2017-2019
+            {{ site.title | escape }} &copy; 2021
             </li>
             {% if site.email %}
             <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
